--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p>Your bio or introduction goes here.</p>
     </section>
     <section id="portfolio">
-        <h2>Portfolio</h2>
+        <h2>Come and get me you stupid boy</h2>
         <!-- Portfolio items -->
     </section>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d227.4952949253702!2d11.444253576118953!3d59.11216905633496!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46446d2224ff82f3%3A0x8849bc69524f118c!2sM%C3%A5stadveien%2083!5e0!3m2!1sen!2sno!4v1705710549829!5m2!1sen!2sno" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
