--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     </section>
     <section id="portfolio">
         <h2>Portfolio</h2>
+        <canvas id="snakeGame" width="400" height="400"></canvas>
+
         <!-- Portfolio items -->
     </section>
     <section id="contact">
